# perfdoc

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  LICENSE  README.md  cross_build.sh  format_all.sh  run_tests.sh
layer/: CMakeLists.txt  VkLayer_mali_perf_doc.json  VkLayer_mali_perf_doc_win32.json  base_object.cpp  base_object.hpp  buffer.cpp  buffer.hpp  commandbuffer.cpp  commandbuffer.hpp  commandpool.cpp  commandpool.hpp  config.cpp  config.hpp  descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set.cpp  descriptor_set.hpp  descriptor_set_layout.cpp  descriptor_set_layout.hpp  device.cpp  device.hpp  device_memory.cpp  device_memory.hpp  dispatch.cpp  dispatch_helper.cpp  dispatch_helper.hpp  event.cpp  event.hpp  exports.def  format.hpp  framebuffer.cpp  framebuffer.hpp  heuristic.cpp  heuristic.hpp  image.cpp  image.hpp  image_view.cpp  image_view.hpp  instance.cpp  instance.hpp  (+21 more)
tests/: CMakeLists.txt  allocation-size-test.cpp  clear-image.cpp  commandbuffer-test.cpp  compute-test.cpp  descriptor-set-allocation-checks.cpp  multisampling.cpp  push-constant.cpp  queue-test.cpp  samplers.cpp  stub-layer-test.cpp  transient.cpp
tests/glsl/: CMakeLists.txt  basic.comp  push_constant.comp  quad.frag  quad.vert  quad_no_attribs.vert  quad_sampler.frag  sampler.comp
tests/util/: CMakeLists.txt  util.cpp  util.hpp  vulkan_test.cpp  vulkan_test.hpp
tests/util/stub/: CMakeLists.txt  libvulkan-stub.cpp
